Add loaded class

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en" data-framework="es6">
+<html lang="en-GB" data-framework="es6">
 	<head>
 		<meta charset="utf-8">
 		<title>Vanilla ES6 • TodoMVC</title>
 		<link rel="stylesheet" href="/styles.css">
 	</head>
-	<body>
+	<body class="is-loaded">
 		<header>
 			<h1>Percy example</h1>
 			<p>Testing Percy</p>
