--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body class="is-loaded">
 		<header>
-			<h1>Percy test page</h1>
+			<h1>Percy test</h1>
 			<p>Testing Percy</p>
 		</header>
 	</body>
